all set first page

--- a/style.css
+++ b/style.css
@@ -1,9 +1,36 @@
-body{
+body {
     font-family: 'Roboto', sans-serif;
+    background-image: url(images/top-banner.png);
+    background-repeat: no-repeat;
 }
-h1{
+
+h1 {
     font-size: 50px;
 }
-.orangehead{
+
+.section {
+    width: 100%;
+    justify-content: center;
+    display: flex;
+}
+
+.orangehead {
     color: orange;
+}
+
+.division {
+    float: left;
+    width: 52%;
+    margin
+}
+
+.division p {
+    width: 60%;
+}
+
+img {
+    float: right;
+    width: 35%;
+    height: 35%;
+
 }
