--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ h1 {
     font-size: 50px;
 }
 
-.section {
+.headofall {
     width: 100%;
     justify-content: center;
     display: flex;
@@ -24,7 +24,7 @@ h1 {
     margin
 }
 
-.division p {
+.division .bio {
     width: 60%;
 }
 
