--- a/style.css
+++ b/style.css
@@ -1,5 +1,10 @@
 body {
     font-family: 'Roboto', sans-serif;
+    margin: 0;
+    padding: 0;
+}
+
+#firstPage {
     background-image: url(images/top-banner.png);
     background-repeat: no-repeat;
 }
@@ -43,6 +48,7 @@ img {
     margin-top: 10px;
     float: left;
     border-radius: 3px;
+    font-weight: bolder;
 
 }
 
