--- a/style.css
+++ b/style.css
@@ -47,7 +47,7 @@ h2 {
 .mybtn {
     text-decoration: none;
     color: rgb(255, 255, 255);
-    background: linear-gradient(45deg, #F78868ed, #FB6354);
+    background: linear-gradient(0deg, #FFA032, #FFC91B);
     padding: 9px 32px 9px;
     margin-top: 10px;
     float: left;
